--- a/style.css
+++ b/style.css
@@ -17,8 +17,9 @@ body {
 
 header {
     background: white;
-    height: 6rem;
+    height: 8rem;
     box-shadow: .1rem .1rem 1rem rgb(165, 165, 165);
+    justify-content: center;
     
     display: flex;;
 
@@ -26,9 +27,10 @@ header {
 
 header nav {
     display: flex;
-    margin: 2rem auto 2rem 2rem;
+    margin: 3rem auto 2rem 2rem;
     gap: 2rem;
 }
+
 
 
 header nav a {
@@ -42,18 +44,26 @@ header nav a:hover {
     color: rgb(34, 34, 34);
 }
 
+
 header input {
     background: rgb(228, 228, 228);
-    border: solid rgb(197, 197, 197) .1rem;
-    height: 4rem;
+    border: solid rgb(191, 191, 191) .2rem;
+    color: 97, 97, 97;
+    
+    height: 5rem;
     width: 30rem;
-    margin: auto;
+    margin: auto 8.5rem auto 0;
     border-radius: .8rem;
     padding: .1rem 1rem;
     transition: background .2s;
     font-family: "Inria Sans", sans-serif;
     font-size: 1.5rem;
     font-weight: 600;
+}
+
+header input:focus {
+    color: rgb(97, 97, 97);
+    outline: solid rgb(155, 155, 155) .2rem;
 }
 
 header input:hover {
@@ -63,21 +73,23 @@ header input:hover {
 
 
 .pfp {
-height: 4rem;
-width: 4rem;
+height: 5rem;
+width: 5rem;
 border-radius: 50%;
-margin: 1rem 1rem 0 auto;
+margin: 1.7rem 2rem 0 auto;
 }
 
 .page {
-    align-items: center;
+    margin: 0 auto;
 }
 
 .board {
-    margin: 4rem 20rem;
+    margin: 4rem auto;
     display: grid;
     grid-template-columns: 1fr 1fr auto;
     gap: 2rem;
+    max-width: 70rem;
+    justify-content: center;
 }
 
 .pictures {
